[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scenes/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/art/monochrome_transparent_packed.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.2017, 15.0726 )

[sub_resource type="CircleShape2D" id=3]
radius = 159.919

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackMeleeRing" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackMeleeRing"]
shape = SubResource( 2 )

[node name="DetectionRing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRing"]
shape = SubResource( 3 )

[node name="Timers" type="Node2D" parent="."]

[node name="BulletTimer" type="Timer" parent="Timers"]

[node name="AttackSpeed" type="Timer" parent="Timers"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )
[connection signal="body_shape_entered" from="AttackMeleeRing" to="." method="_on_AttackMeleeRing_body_shape_entered"]
[connection signal="body_shape_exited" from="AttackMeleeRing" to="." method="_on_AttackMeleeRing_body_shape_exited"]
[connection signal="body_entered" from="DetectionRing" to="." method="_on_DetectionRing_body_entered"]
[connection signal="body_exited" from="DetectionRing" to="." method="_on_DetectionRing_body_exited"]
[connection signal="timeout" from="Timers/BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="Timers/AttackSpeed" to="." method="_on_AttackSpeed_timeout"]
